--- a/calculator.css
+++ b/calculator.css
@@ -20,19 +20,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 auto;
-}
-
-.calculator h1 {
-  color: var(--white-color);
-  margin: 0 auto;
+  margin: 30px auto;
 }
 
 .calculator p {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  font-size: 45px;
+  font-size: 30px;
   color: var(--white-color);
 }
 
@@ -53,6 +48,7 @@
   outline: none;
   background-color: var(--black-gray-color);
   border-radius: 50%;
+  height: 50px;
 }
 
 .btns .btn-gray {
@@ -63,6 +59,7 @@
   background-color: var(--orange-color);
 }
 
-.zero {
+.btns .zero {
   grid-area: zero;
+  border-radius: 30px;
 }
