--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: aqua;
 }
 
 .calculator {
@@ -21,6 +22,13 @@
   flex-direction: column;
   justify-content: center;
   margin: 30px auto;
+  border-radius: 20px;
+}
+
+.div {
+  background-color: var(--black-gray-color);
+  border-radius: 30px;
+  padding: 10px 15px;
 }
 
 .calculator p {
@@ -29,6 +37,8 @@
   align-items: center;
   font-size: 30px;
   color: var(--white-color);
+  background-color: var(--black-gray-color);
+  border-radius: 30px;
 }
 
 .btns {
@@ -41,6 +51,7 @@
     "zero zero point equally";
   gap: 15px;
   padding-top: 10px;
+  background-color: transparent;
 }
 
 .btns .btn {
