changed background color *

--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: aqua;
+  background-color: #d6d8d8;
 }
 
 .calculator {
